Fix main container alignment

--- a/pylibxai/pylibxai-ui/src/App.css
+++ b/pylibxai/pylibxai-ui/src/App.css
@@ -5,12 +5,10 @@
 }
 
 .main-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  margin: 0 15%;
-  min-height: 100vh;
-  background-color: #fff;
+  margin-left: 250px;
+  padding: 1rem;
+  min-height: calc(100vh - 50px);
+  background-color: #f8f9fa;
 }
 
 .main-container:before, .main-container:after {
